# Drydock

./: .gitignore  DESIGN.md  README.md  pyproject.toml
drydock/: __init__.py  cli.py  config.py
drydock/_data/ui/: UI_SPEC.md  api.js  app.css  app.js  index.html  router.js  ui.js
drydock/_data/ui/views/: agents.js  approvals.js  memory.js  overview.js  repo.js  runs.js  settings.js  work.js
drydock/mcp/: server.py
drydock/runtime/: __init__.py  agentdef.py  authoring.py  budget.py  hooks.py  kernel.py  models.py  pricing.py  runner.py  runners_external.py  session.py  toolbus.py  tools.py
drydock/runtime/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
drydock/sandbox/: __init__.py  base.py  detect.py  tier0.py  worktree.py
drydock/server/: __init__.py  app.py  repo.py  runmanager.py
drydock/store/: __init__.py  allocator.py  chroma.py  db.py  embeddings.py  fts.py  graph.py  graph_links.py  planning.py  registry.py  runs.py  schema.sql  service.py  tickets.py
policies/: default.yaml
tests/: test_runtime.py  test_server.py  test_store.py
