[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drydock-ai"
version = "0.1.0.dev0"
description = "Agents work in drydock, not on your ship. Local-first sandbox + PM + policy platform for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Adrian Melendez" }]
keywords = ["ai-agents", "sandbox", "mcp", "policy", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.2",
]

[project.optional-dependencies]
# Phase 1+
runtime = ["anthropic>=0.40", "aegis-hooks>=0.2", "pyyaml>=6.0"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
# recall upgrades — everything degrades gracefully without these
vectors = ["chromadb>=0.5"]
embeddings = ["fastembed>=0.3"]
dev = ["pytest>=8.0"]

[project.scripts]
drydock = "drydock.cli:main"

[project.urls]
Homepage = "https://drydock.tools"
Repository = "https://github.com/Thepizzapie/drydock"

[tool.hatch.build.targets.wheel]
packages = ["drydock"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "drydock/_data/policies"
